[package]
name = "workwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
crossterm = "0.29.0"
dotenv = "0.15.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.19", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tui-input = "0.12.1"
