[package]
name = "workwatch"
version = "0.1.0"
edition = "2024"
description = "Terminal-based time tracking tool written in Rust, featuring a TUI (Text-based User Interface) powered by ratatui, with support for activity logging, real-time elapsed time tracking, and webhook-based notifications."
readme = "README.md"
homepage = "https://github.com/rodriguezjasonlloyd/workwatch/"
repository = "https://github.com/rodriguezjasonlloyd/workwatch/"
license = "MIT"


[dependencies]
chrono = "0.4.41"
crossterm = "0.29.0"
dotenv = "0.15.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.19", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tui-input = "0.12.1"
